2001-04-10  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.dg/wtr-conversion-1.c: New testcase.

2001-04-10  Richard Henderson  <rth@redhat.com>

	* g++.old-deja/g++.other/array5.C: New.

2001-04-08  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* gcc.c-torture/execute/20010408-1.c: New test.

2001-04-06  Benjamin Kosnik  <bkoz@redhat.com>

	* g++.old-deja/g++.benjamin/15071.C (main): Update to conformant
	headers and constructs.
	* g++.old-deja/g++.robertl/eb79.C: Same.
	* g++.old-deja/g++.robertl/eb77.C (main): Same.
	* g++.old-deja/g++.robertl/eb73.C: Same.
	* g++.old-deja/g++.robertl/eb66.C (main): Same.
	* g++.old-deja/g++.robertl/eb55.C (t): Same.
	* g++.old-deja/g++.robertl/eb54.C (main): Same.
	* g++.old-deja/g++.robertl/eb46.C (main): Same.
	* g++.old-deja/g++.robertl/eb44.C: Same.
	* g++.old-deja/g++.robertl/eb41.C (main): Same.
	* g++.old-deja/g++.robertl/eb4.C (main): Same.
	* g++.old-deja/g++.robertl/eb39.C: Same.
	* g++.old-deja/g++.robertl/eb33.C (main): Same.
	* g++.old-deja/g++.robertl/eb31.C (main): Same.
	* g++.old-deja/g++.robertl/eb30.C: Same.
	* g++.old-deja/g++.robertl/eb3.C: Same.
	* g++.old-deja/g++.robertl/eb24.C (T>): Same.
	* g++.old-deja/g++.robertl/eb21.C: Same.
	* g++.old-deja/g++.robertl/eb15.C: Same.
	* g++.old-deja/g++.robertl/eb118.C: Same.
	* g++.old-deja/g++.robertl/eb115.C (main): Same.
	* g++.old-deja/g++.robertl/eb113.C (streambuf): Same.
	* g++.old-deja/g++.robertl/eb109.C: Same.
	* g++.old-deja/g++.other/sibcall1.C (main): Same.
	* g++.old-deja/g++.mike/rtti1.C: Same.
	* g++.old-deja/g++.mike/p658.C: Same.
	* g++.old-deja/g++.mike/net46.C: Same.
	* g++.old-deja/g++.mike/net34.C: Same.
	* g++.old-deja/g++.mike/memoize1.C: Same.
	* g++.old-deja/g++.mike/eh2.C: Same.
	* g++.old-deja/g++.law/weak.C: Same.
	* g++.old-deja/g++.law/visibility7.C: Same.
	* g++.old-deja/g++.law/visibility25.C: Same.
	* g++.old-deja/g++.law/visibility22.C: Same.
	* g++.old-deja/g++.law/visibility2.C: Same.